tests/vertical-slice/accept/sibling_module_call.hew
import arith;

fn main() -> i64 {
    arith.add(10, 32)
}
