tests/vertical-slice/reject/unresolved_module.hew
import does_not_exist;

fn main() -> i64 { 0 }
